config-root/namespaces/jx-production/nodey545/nodey545-nodey545-deploy.yaml
# Source: nodey545/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey545-nodey545
  labels:
    draft: draft-app
    chart: "nodey545-3.0.32"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey545-nodey545
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey545-nodey545
    spec:
      serviceAccountName: nodey545-nodey545
      containers:
        - name: nodey545
          image: "gcr.io/jenkins-x-labs-bdd/nodey545:3.0.32"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
