config-root/namespaces/jx-production/nodey545/nodey545-ingress.yaml
# Source: nodey545/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodey545
  namespace: jx-production
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodey545
              servicePort: 80
      host: nodey545-jx-production.34.105.246.143.nip.io
